ts_key_value_partitioning_always_exist_in_reading added to skip Cassandra ts_kv_partitions_cf reads (2)